Fixed word wrap

--- a/sass/global.scss
+++ b/sass/global.scss
@@ -21,7 +21,6 @@ body {
 }
 
 a {
-  word-break: break-all;
   color: #3f51b5;
 }
 
@@ -80,10 +79,6 @@ main {
 
   h3 {
     font-size: 1.2em;
-  }
-
-  p {
-    word-break: break-word;
   }
 }
 
